feat: core base types
Signed-off-by: jacken <jackenliy@gmail.com>

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -17,5 +17,8 @@
     "monitorjs",
     "monitor",
     "fe monitor"
-  ]
+  ],
+  "dependencies": {
+    "@monitorjs/shared": "workspace:^"
+  }
 }
