feat: core base init
Signed-off-by: jacken <jackenliy@gmail.com>

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,6 +19,7 @@
     "fe monitor"
   ],
   "dependencies": {
-    "@monitorjs/types": "workspace:^"
+    "@monitorjs/types": "workspace:^",
+    "@monitorjs/utils": "workspace:^"
   }
 }
